FIX: some spacing and hero-image

--- a/src/app/features/home/components/hero/hero.component.scss
+++ b/src/app/features/home/components/hero/hero.component.scss
@@ -1,8 +1,8 @@
 .hero-section {
   padding: 80px 0;
   position: relative;
-  overflow: hidden;
-  
+  overflow: hidden; 
+
   .hero-content {
     display: flex;
     align-items: center;
@@ -115,7 +115,9 @@
     padding: 0;
     overflow: hidden;
     border-radius: 20px;
-    
+    max-width:500px;
+    margin-left: 150px;
+
     @media (max-width: 992px) {
       width: 100%;
       max-width: 550px;
@@ -124,7 +126,7 @@
   
   .hero-image {
     position: relative;
-    
+    max-width: 500px; 
     .main-image {
       width: 100%;
       height: auto;
@@ -199,7 +201,7 @@
     flex-direction: column;
     align-items: center;
     position: absolute;
-    bottom: 20px;
+    bottom: -10px;
     left: 50%;
     transform: translateX(-50%);
     animation: bounce 2s infinite;
